#2 Build framework for product microservice
Add Dockerfile.